# dissect.ole

./: .git-blame-ignore-revs  COPYRIGHT  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: dissect-ci.yml
dissect/ole/: __init__.py  c_ole.py  exceptions.py  ole.py
